k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickbank
  labels:
    app: quickbank
spec:
  selector:
    app: quickbank
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
