k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kuickbank
  labels:
    app: kuickbank
spec:
  to:
    kind: Service
    name: kuickbank
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
